--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <body>
             
             <div id="profile-container">
-                <img id = "profile-image" src="pic\sojong.jpg" alt="Picture Profile"/>
+                <img id = "profile-image" src="pic\nurul.jpg" alt="Picture Profile"/>
                 <h2 id="profile-name">KAKAS</h2>
             </div>
           
     </body>
     <footer>
-        footer
+        kaki
     </footer>
 </html>
